# rustbier

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  base.Dockerfile  docker-compose.tests.yaml  docker-compose.yaml
benches/: bench.rs
config/: compose.json  default.json  production.json
src/: main.rs  main_async.rs
src/commons/: errors.rs  mod.rs  s3.rs
src/image_processor/: mod.rs
tests/: e2e.rs
tests/resources/: img-test  watermark
tests/utils/: mod.rs
