[package]
name = "rustbier"
version = "0.1.0"
authors = ["Augusto César Dias <augusto.dias@olx.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
actix-rt = "0.2.4"
actix-server = "0.6.0"
actix-http = "0.2.8"
actix-web-prom = "0.1.2"
log = "0.4.8"
pretty_env_logger = "0.3.0"
rusoto_s3 = "0.40.0"
rusoto_core = "0.40.0"
opencv = "0.19.1"
futures = "0.1.28"
serde = "1.0.98"
serde_derive = "1.0.98"
serde_qs = {version = "0.5.0", features=["actix"]}
config = "0.9.3"
magick_rust = { git = "https://github.com/nlfiedler/magick-rust" }

[dev-dependencies]
bytes = "0.4.12"